// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon Component snapshots should match snapshot 1`] = `
.c0 {
  width: 1em;
  height: 1em;
}

<Icon__Svg
  className="ft-icon"
  fill="inherit"
  height="1em"
  strokeWidth={1}
  width="1em"
>
  <svg
    className="ft-icon c0"
    fill="inherit"
    strokeWidth={1}
  >
    <use
      xlinkHref="/iconsprite.svg#icon-caret-down"
    />
  </svg>
</Icon__Svg>
`;

exports[`Icon Component snapshots should match snapshot 2`] = `
.c0 {
  width: 1em;
  height: 1em;
}

<Icon__Svg
  className="ft-icon"
  fill="orange"
  height="1em"
  strokeWidth={1}
  width="1em"
>
  <svg
    className="ft-icon c0"
    fill="orange"
    strokeWidth={1}
  >
    <use
      xlinkHref="/iconsprite.svg#icon-caret-down"
    />
  </svg>
</Icon__Svg>
`;

exports[`Icon Component snapshots should match snapshot 3`] = `
.c0 {
  width: 100px;
  height: 20px;
}

<Icon__Svg
  className="ft-icon"
  fill="inherit"
  height="20"
  strokeWidth={1}
  style={
    Object {
      "background": "khaki",
      "fill": "navy",
    }
  }
  width="100"
>
  <svg
    className="ft-icon c0"
    fill="inherit"
    strokeWidth={1}
    style={
      Object {
        "background": "khaki",
        "fill": "navy",
      }
    }
  >
    <use
      xlinkHref="/iconsprite.svg#icon-caret-down"
    />
  </svg>
</Icon__Svg>
`;

exports[`Icon Component snapshots should match snapshot 4`] = `
.c0 {
  width: 20px;
  height: 50px;
}

<Icon__Svg
  className="ft-icon"
  fill="inherit"
  height="50"
  strokeWidth={1}
  style={
    Object {
      "background": "khaki",
      "fill": "navy",
    }
  }
  width="20"
>
  <svg
    className="ft-icon c0"
    fill="inherit"
    strokeWidth={1}
    style={
      Object {
        "background": "khaki",
        "fill": "navy",
      }
    }
  >
    <use
      xlinkHref="/iconsprite.svg#icon-caret-down"
    />
  </svg>
</Icon__Svg>
`;
